# gateware

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config
gateware/: aes_opentitan.py  aes_reg_litex.sv  aes_sha2.py  ice40_hard_i2c.py  jtag_phy.py  keyboard.py  keyrom.py  memlcd.py  messible.py  perfcounter.py  rom_block.py  sha2_litex.sv  sha2_opentitan.py  sha512_litex.sv  sha512_opentitan.py  spi_7series.py  spi_ice40.py  spimemio.v  spinor.py  sram_32.py  sram_32_cached.py  ticktimer.py  timer_alwayson.py  wdt.py
gateware/chacha/: README.md  chacha.py  chacha_core.v  chacha_qr.v
gateware/cpu/: VexRiscv_BetrustedSoC_Debug.v  VexRiscv_BetrustedSoC_Debug.yaml  VexRiscv_HaD_Debug.v
gateware/curve25519/: README.md  engine.py
gateware/i2c/: __init__.py  core.py  i2c_controller_bit_ctrl.v  i2c_controller_byte_ctrl.v  i2c_controller_defines.v  i2c_controller_top.v  i2c_master_bit_ctrl.v  i2c_master_byte_ctrl.v  i2c_master_top.v
gateware/info/: __init__.py  dna.py  git.py
gateware/sha512/: hmac512_core.sv  hmac512_pkg.sv  prim_packer512.sv  sha512.sv  sha512_pad.sv
gateware/trng/: __init__.py  ring_osc.py  ring_osc_v2.py  test_tests.py  trng_managed.py
gateware/usb/: usb_device.py
gateware/usb/SpinalUsb/: UsbDeviceWithPhyWishbone.v  UsbOhciWishbone.v  build.ps1  build.sbt
sim/: cleanup.sh  new_sim.py
sim/aes/: .gitignore  dut.py  pac-cargo-template  top_tb.v  top_tb_sim.wcfg
sim/aes/aes/: aes_control.sv  aes_core.sv  aes_key_expand.sv  aes_prng.sv
sim/aes/test/: Cargo.toml
sim/aes/test/betrusted-hal/src/: hal_aes.rs  lib.rs
sim/aes/test/src/: aes_test.rs  main.rs
sim/aes/testbench/: .gitignore
sim/aes/testbench/betrusted-hal/: Cargo.toml
sim/aes/testbench/betrusted-hal/src/: hal_aes.rs  lib.rs
sim/aes/testbench/src/: main.rs
sim/curve_engine/: DSP48E1_sim.v  README.md  dut.py  minimal-workspace-template  top_tb.v  top_tb_sim.wcfg
sim/curve_engine/testbench/: Cargo.toml
sim/curve_engine/testbench/src/: main.rs
sim/i2s/: dut.py  top_tb.v  top_tb_sim.wcfg
sim/i2s/test/src/: main.rs
sim/i2s/testbench/: Cargo.toml
sim/i2s/testbench/src/: main.rs
sim/jtag_phy/: dut.py  top_tb.v
sim/jtag_phy/alloc-riscv/: Cargo.toml
sim/jtag_phy/alloc-riscv/src/: lib.rs
sim/jtag_phy/testbench/: Cargo.toml
sim/kbd/: dut.py  top_tb.v  top_tb_sim.wcfg
sim/kbd/test/: Cargo.toml
sim/kbd/test/src/: main.rs
sim/kbd/testbench/src/: main.rs
sim/keyrom/: .gitignore  dut.py  rom.db  top_tb_sim.wcfg
sim/keyrom/testbench/: Cargo.toml
sim/keyrom/testbench/src/: main.rs
sim/memlcd/: dut.py  sim.py  top_tb.v  top_tb_sim.wcfg
sim/memlcd/test/: Cargo.toml
sim/memlcd/test/src/: lib.rs  main.rs
sim/memlcd/testbench/: Cargo.toml
sim/memlcd/testbench/src/: main.rs
sim/perfcounter/: top_tb.v
sim/perfcounter/testbench/: build.rs
sim/perfcounter/testbench/src/: main.rs
sim/rom_block/: dut.py  top_tb_sim.wcfg
sim/rom_block/testbench/: Cargo.toml
sim/rom_block/testbench/src/: main.rs
sim/sha2/: .gitignore  dut.py  pac-cargo-template  top_tb.v  top_tb_sim.wcfg
sim/sha2/hmac/: hmac_core.sv  prim_packer.sv  sha2_pad.sv
sim/sha2/testbench/: .gitignore  Cargo.toml
sim/sha2/testbench/sha2-hal/: Cargo.toml
sim/sha2/testbench/sha2-hal/src/: hal_sha2.rs  lib.rs
sim/sha2/testbench/src/: main.rs
sim/sha512/: .gitignore  dut.py  top_tb.v  top_tb_sim.wcfg
sim/sha512/testbench/: .gitignore  Cargo.toml
sim/sha512/testbench/sha512-hal/: Cargo.toml
sim/sha512/testbench/sha512-hal/src/: hal_sha512.rs  lib.rs
sim/sha512/testbench/sha512-pac/: Cargo.toml
sim/sha512/testbench/src/: main.rs
sim/spi_basic/: SB_IO.v  dut.py  top_tb.v  top_tb_sim.wcfg
sim/spi_basic/test/: Cargo.toml
sim/spi_basic/test/src/: main.rs
sim/spi_basic/testbench/src/: main.rs
sim/spi_dopi/: BUFR.v  IDELAYE2.v  dut.py  make_memh.py  top_tb.v  top_tb_sim.wcfg
sim/spi_dopi/MX66UM1G45G/: MX66UM1G45G.v  README.txt
sim/spi_dopi/test/src/: main.rs
sim/spi_dopi/testbench/: Cargo.toml
sim/spi_dopi/testbench/src/: main.rs
sim/spififo/: dut.py  top_tb.v  top_tb_sim.wcfg  top_tb_sim.wdb
sim/spififo/test/: Makefile
sim/spififo/testbench/: Cargo.toml
sim/spififo/testbench/src/: main.rs
sim/sram32/: dut.py  top_tb.v  top_tb_sim.wcfg
sim/sram32/test/: Cargo.toml
sim/sram32/testbench/src/: main.rs
sim/sram32_cached/: dut.py  top_tb.v  top_tb_sim.wcfg
sim/sram32_cached/testbench/: Cargo.toml
sim/sram32_cached/testbench/src/: main.rs
sim/template/: dut.py  top_tb.v
sim/template/test/: Cargo.toml
sim/template/test/src/: main.rs
sim/template/testbench/: Cargo.toml
sim/template/testbench/src/: main.rs
sim/trng_managed/: XADC.v  dut.py  top_tb.v
sim/trng_managed/testbench/: Cargo.toml
sim/trng_managed/testbench/src/: main.rs
sim/wdt/: dut.py  top_tb.v  top_tb_sim.wcfg
sim/wdt/testbench/: Cargo.toml
sim/wdt/testbench/src/: main.rs
sim_noci/jtag_phy/: dut.py  top_tb_sim.wcfg
sim_noci/jtag_phy/jtag/: Cargo.toml
sim_noci/jtag_phy/jtag/src/: lib.rs
sim_noci/jtag_phy/testbench/src/: main.rs
sim_noci/perfcounter/: dut.py
sim_noci/perfcounter/testbench/: Cargo.toml
sim_noci/perfcounter/testbench/src/: main.rs
sim_support/: common.v  memory_rom.x  memory_spi.x  sim_bench.py  top_tb_sim.wcfg  xsim_extract.py
sim_support/rust/: pac-Cargo.toml
sim_support/rust/bios/: Cargo.toml  Makefile  build.rs
sim_support/rust/bios/src/: lib.rs  main.rs
sim_support/rust/macros/: Cargo.toml
sim_support/rust/macros/src/: lib.rs
sim_support/rust/pac/: Cargo.toml  build.rs  lib.rs
sim_support/rust/pac/src/: lib.rs  pac.rs
sim_support/rust/utralib/: build.rs
vcd/: README.md  __init__.py  parser.py  tracker.py  utils.py  watcher.py
(+141 files in other folders)
