[workspace]
members = [
    "sim/sha2/testbench",
    "sim/aes/testbench",
    "sim/jtag_phy/testbench",
    "sim/spi_basic/testbench",
    "sim/spififo/testbench",
    "sim/sram32/testbench",
    "sim/i2s/testbench",
    "sim/spi_dopi/testbench",
    "sim/kbd/testbench",
    "sim/memlcd/testbench",
    "sim/template/testbench",
    "sim_support/rust/bios",
    "sim_support/rust/pac",
    "sim_support/rust/macros",
]
