[workspace]
members = [
    "sim/keyrom/testbench",
    "sim/wdt/testbench",
    "sim/trng_managed/testbench",
    "sim/curve_engine/testbench",
    "sim/sha512/testbench",
    "sim/sha2/testbench",
    "sim/aes/testbench",
    "sim_noci/jtag_phy/testbench",
    "sim/spi_basic/testbench",
    "sim/spififo/testbench",
    "sim/sram32/testbench",
    "sim/i2s/testbench",
    "sim/spi_dopi/testbench",
    "sim/kbd/testbench",
    "sim/memlcd/testbench",
    "sim/template/testbench",
    "sim_support/rust/bios",
    "sim_support/rust/pac",
    "sim_support/rust/macros",
]
