[package]
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
readme = "README.md"
name = "sim-bios"
version = "0.1.0"

[dependencies]
vexriscv = "0.0.2"
betrusted-rt = "0.0.1"
pac = { path = "../pac" }
#test = { path = "test" }
xous-nommu = { path = "../xous-nommu" }
sim-bios-macros = { path = "../macros", version = "0.0.1" }
