[package]
name = "pac"
authors = ["bunnie <bunnie@kosagi.com>"]
description = "Peripheral Access Crate for simulation frameworks"
license = "Apache"
version = "0.0.1"

[dependencies]
bare-metal = "0.2.0"
riscv = { version = "0.0.2", package = "vexriscv" }
vcell = "0.1.0"

[build-dependencies]
svd2rust = "0.17.0"
