[package]
name = "sha512-hal"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pac = { path = "../../../../sim_support/rust/pac" }
spin = "0.5.2"
bitflags = "1.2.1"
volatile = "0.2.6"
digest = "0.9"

[features]
evt = []
dvt = []
